# bookworks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE  Makefile  README.md  app.py  md_publish.py  mypy.ini  pyproject.toml
.cursor/rules/: do-not-write-prose-in-code.mdc  experimentation_approach.mdc  use-tools-for-nice-python.mdc  use-uv-for-python.mdc  writing-production-python.mdc
.github/workflows/: testing.yaml
bookworks/: __init__.py  audio_gen.py  bw_utils.py  clean_for_tts.py  md_publish.py
bookworks/audio/: tts.py
bookworks/core/: __init__.py  publisher.py
bookworks/text/: processors.py
bookworks/utils/: commands.py  filesystem.py  helpers.py
experiments/: clean-markdown-for-tts.py  epub-to-markdown-for-tts.py
experiments/audio_gen/: clean-markdown-for-tts.py  experiment_utils.py  experimentation_methodology.md
experiments/audio_gen/2025-03-14_chapter-chunking/: STATUS.yaml  clean-markdown-for-tts-chunked.py  clean-markdown-for-tts.py  experiment_plan.md  minimal_changes.md
experiments/audio_gen/2025-03-14_chapter-chunking/output/clean-markdown-for-tts/: sample_book.md
experiments/audio_gen/2025-03-15_gpt-enhance-text-for-tts/: STATUS.yaml
experiments/audio_gen/chapter_chunking/: clean-markdown-for-tts-chunked.py  experiment_results.md
experiments/audio_gen/output/markdown/: sample_book.md
experiments/audio_gen/output/tts-ready-chapters-chunks/sample_book/: 03_01_Chapter_3_Another_Long_Chapter.md  03_02_Chapter_3_Another_Long_Chapter.md
scripts/: docker-rebuild.sh
templates/: about.html  audiobook.html  base.html  index.html
tests/: conftest.py  test_app.py  test_audio_processing.py  test_bw_utils.py  test_clean_for_tts.py  test_helpers.py  test_md_publish.py  test_publisher.py  test_text_processors.py  test_tts_processor.py
tests/test_data/: book_of_kieth.md
tests/test_data/epub/: Investigation of Low-Frequency Pulsating Tinnitus.epub  The Big Book of Kieth.epub  dewey-essays-in-exp-log.epub  dickens-christmas-carol-1.epub  dickens-christmas-carol-2.epub  hints-for-painters.epub
(+5 files in other folders)
