[project]
name = "bookworks"
version = "0.1.0"
description = "A suite of tools for converting and transforming books between different formats"
authors = [
    {name = "Rory Scott",email = "rory09@gmail.com"}
]
license = {text = "GNU3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.0.0,<4.0.0)",
    "openai (>=1.66.0,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
