[project]
name = "bookworks"
version = "0.1.0"
description = "A suite of tools for converting and transforming books between different formats"
authors = [
    {name = "Rory Scott",email = "rory09@gmail.com"}
]
license = {text = "GNU3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.0.0,<4.0.0)",
    "openai>=1.66.0,<2.0.0",
    "jupyter (>=1.1.1,<2.0.0)",
    "markdown (>=3.7,<4.0)",
    "html2text (>=2024.2.26,<2025.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "pytest>=8.3.5",
    "tiktoken>=0.9.0",
]

[tool.setuptools]
packages = ["bookworks"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-flask = "^1.3.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.10.0",
]
